[BY-25] fix: 403 forbidden 임시 해결 (확인 필요)